AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS = newudpl

newudpl_SOURCES = newudpl.c newudpl.h \
        akiralib.c akiralib.h \
        akiramath.c akiramath.h \
        queue.c queue.h item.h \
        host2ip.c host2ip.h \
        multimer.c multimer.h \
        notify.c notify.h \
        sysdep.h

EXTRA_DIST = ChangeLog.html newudpl.html COPYRIGHT \
        detour_rat \
        notify.c notify.h \
        getopt.c getopt.h \
        uname.c uname.h \
        gettimeofday.c gettimeofday.h \
        winsocklib.c winsocklib.h \
        win32_stdc_off.h win32_stdc_on.h \
        win32std.h config_msc.h config_bc.h\
        msc/*.ds? \
        bcb/*.bp? bcb/obj/*
